# ragnaroek-midgard-core

./: Doxyfile  INSTALL  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  config.h  config.h.in  configure.ac  midgard.pc  midgard.pc.in
conf.d/: midgard.conf.example
dists/OBS/: debian.changelog  debian.control  debian.libmidgard8.9-dev.install  debian.libmidgard8.9.install  debian.midgard-common.manpages  debian.rules  midgard-core.dsc  midgard-core.spec  svn-commit.tmp
dists/fedora/: midgard-core.spec
man/: midgard-config.1  midgard-owner.1  midgard-pageresolve.1  midgard-preparse.1  midgard-snippet.1
midgard/: authfailure.h  guid.h  lib_midgard.h  midgard.h  midgard_apache.h  midgard_blob.h  midgard_collector.h  midgard_config.h  midgard_config_auto.h  midgard_config_auto.h.in  midgard_connection.h  midgard_datatypes.h  midgard_dbobject.h  midgard_dbus.h  midgard_defs.h  midgard_error.h  midgard_legacy.h  midgard_metadata.h  midgard_object.h  midgard_object_attachment.h  midgard_object_parameter.h  midgard_object_property.h  midgard_quota.h  midgard_reflection_property.h  midgard_replicator.h  midgard_schema.h  midgard_sitegroup.h  midgard_style.h  midgard_timestamp.h  midgard_type.h  midgard_user.h  pageresolve.h  parser.h  parsers.h  pool.h  query.h  query_builder.h  select_db.h  select_db2.h  tablenames.h  (+3 more)
src/: access.c  authfailure.tmpl  config.c  defaults.h  fmt_russian.c  fmt_russian.h  format.c  gbase64.c  gbase64.h  group_constraint.h  guid.c  md5.c  md5.h  mgdschema.c  midgard.c  midgard_blob.c  midgard_collector.c  midgard_config.c  midgard_connection.c  midgard_core_config.c  midgard_core_config.h  midgard_core_object.c  midgard_core_object.h  midgard_core_object_class.c  midgard_core_object_class.h  midgard_core_object_parameter.h  midgard_core_query.h  midgard_core_query_builder.c  midgard_core_query_builder.c.bak  midgard_core_query_builder.h  midgard_datatypes.c  midgard_dbobject.c  midgard_dbus.c  midgard_dbus_interface.h  midgard_error.c  midgard_mysql.h  midgard_object.c  midgard_object_attachment.c  midgard_object_parameter.c  midgard_object_property.c  (+31 more)
test/: check_guid.c  check_midgard.c  check_query_builder.c  midgard-owner.c  midgard-query.c  midgard-schema.c  midgard-snippet.c  path_parser.c
tests/: Makefile.am  autogen.sh  configure.ac  midgard_test.c  midgard_test.h  midgard_test_config.c  midgard_test_config.h  midgard_test_connection.c  midgard_test_connection.h  midgard_test_database.c  midgard_test_metadata.c  midgard_test_metadata.h  midgard_test_object_basic.c  midgard_test_object_class.c  midgard_test_object_fetch.c  midgard_test_object_tree.c  midgard_test_property_reflector.c  midgard_test_query_builder.c  midgard_test_replicator.c  midgard_test_replicator.h  midgard_test_user.c  midgard_test_user.h  run-midgard-test-config.c  run-midgard-test-object.c  run-midgard-test-tree.c  run_all_tests.sh
win32/: crypt_win32.c  crypt_win32.h  status.txt  win95nt.h
